added new image

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <h1> This is my github account </h1>
 <p> Sending new code </p>
 <img src="Scene1.jpeg">
+<img src="images.jpeg" alt="">
 </body>
 </html> 
